[fix] fixing dark mode bug
Ver. 2.6.1

fixing darkmode bug test1

--- a/css/dark_mode.css
+++ b/css/dark_mode.css
@@ -11,9 +11,9 @@ a{
 .scroll_to{
     color: #7D7D7D;
 }
-.scroll_section li::after {
+/* .scroll_section li::after {
     background: #A1E3FF;
-}
+} */
 
 .sections div h1{
     -webkit-text-stroke: 1px #fff;
